[gd_scene load_steps=8 format=3 uid="uid://ukd4ge1kxf66"]

[ext_resource type="Script" uid="uid://bs42tpc75qeo3" path="res://scenes/load.gd" id="1_wgumh"]
[ext_resource type="Texture2D" uid="uid://dfvysekdfjhtn" path="res://graphics/title/download/circle_spin.png" id="2_e1em8"]
[ext_resource type="PackedScene" uid="uid://dxouk8qy8oytm" path="res://scenes/scheduler.tscn" id="4_54cop"]

[sub_resource type="Animation" id="Animation_vipce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qym84"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 6.28319, 12.5664]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v22qi"]
resource_local_to_scene = true
_data = {
&"RESET": SubResource("Animation_vipce"),
&"spin": SubResource("Animation_qym84")
}

[sub_resource type="ImageTexture" id="ImageTexture_nwe6e"]

[node name="Load" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wgumh")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="CircleSpin" type="TextureRect" parent="."]
modulate = Color(0, 0.52549, 0.996078, 1)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -145.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(52, 52)
texture = ExtResource("2_e1em8")

[node name="Spin" type="AnimationPlayer" parent="CircleSpin"]
libraries = {
&"": SubResource("AnimationLibrary_v22qi")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("ImageTexture_nwe6e")

[node name="Scheduler" parent="." instance=ExtResource("4_54cop")]

[connection signal="data_loaded" from="." to="." method="_on_data_loaded"]
[connection signal="animation_finished" from="CircleSpin/Spin" to="." method="_on_spin_animation_finished"]
